[gd_scene load_steps=3 format=3 uid="uid://0emus8fj3eyi"]

[ext_resource type="Script" uid="uid://uta7cxs1ke3w" path="res://Scripts/mask_collectible.gd" id="1_tdmab"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_snexv"]
size = Vector2(50, 50)

[node name="mask_collectible" type="Area2D" groups=["mask"]]
script = ExtResource("1_tdmab")

[node name="mask_collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_snexv")

[node name="mask_texture" type="Sprite2D" parent="mask_collider"]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
